<resources>
  <string name="empty_string"></string>
  <string name="app_name">PhoneProfilesPlus</string>
  <string name="menu_edit_profiles">Editor</string>
  <string name="menu_settings">Settings</string>
  <string name="title_activity_phone_profiles">PhoneProfiles Plus</string>
  <string name="title_activity_profile_preferences">Profile preferences</string>
  <string name="title_activity_event_preferences">Event preferences</string>
  <string name="menu_new_profile">New profile</string>
  <string name="menu_delete_all_profiles">Delete all profiles</string>
  <string name="menu_new_event">New event</string>
  <string name="menu_delete_all_events">Delete all events</string>
  <string name="profiles_header_label">Last activated profile</string>
  <string name="profiles_header_profile_name_no_activated">No profile activated</string>
  <string name="profile_name_default">Profile</string>
  <string name="event_name_default">Event</string>
  <string name="profile_context_item_edit">Edit</string>
  <string name="profile_context_item_duplicate">Duplicate</string>
  <string name="profile_context_item_delete">Delete</string>
  <string name="profile_context_header">Profile</string>
  <string name="profile_string_0">Profile</string>
  <string name="event_string_0">Event</string>
  <string name="delete_profile_alert_message">Delete profile?</string>
  <string name="delete_event_alert_message">Delete event?</string>
  <string name="toast_profile_activated_0">Profile</string>
  <string name="toast_profile_activated_1">activated</string>
  <string name="title_activity_image_view_preference_dialog">Change icon</string>
  <string name="title_activity_applications_preference_dialog">Set application</string>
  <string name="preference_profile_no_change">Don\'t change</string>
  <string name="preference_profile_autobrightness">Automatic</string>
  <string name="active_profile_notification_label">Active profile</string>
  <string name="title_activity_phone_profiles_preferences">Application Settings</string>
  <string name="menu_exit">Exit</string>
  <string name="profile_item_help_text">Long-press to edit</string>
  <string name="activate_profile_alert_message">Activate profile?</string>
  <string name="brightness_pref_dialog_no_change_chb">Don\'t change</string>
  <string name="brightness_pref_dialog_automatic_chb">Automatic</string>
  <string name="imageview_resource_file_pref_dialog_gallery_btn">Custom&#8230;</string>
  <string name="volume_pref_dialog_no_change_chb">Don\'t change</string>
  <string name="imageview_preference_profile_icon_label">Profile icon</string>
  <string name="applications_preference_profile_icon_label">Run application</string>
  <string name="phone_profiles_pref_category_activator">Activator</string>
  <string name="phone_profiles_pref_category_editor">Editor</string>
  <string name="phone_profiles_pref_category_gui">Application interface</string>
  <string name="phone_profiles_pref_category_activation">Profile activation</string>
  <string name="phone_profiles_pref_category_start">Application start</string>
  <string name="phone_profiles_pref_category_notifications">Notifications</string>
  <string name="phone_profiles_pref_applicationActivate">Activate profile on startup</string>
  <string name="phone_profiles_pref_applicationClose">Close after activating profile</string>
  <string name="phone_profiles_pref_applicationPrefIndicator">Preferences indicator</string>
  <string name="phone_profiles_pref_applicationHeader">Show activated profile</string>
  <string name="phone_profiles_pref_applicationAlert">Alert activating profile</string>
  <string name="phone_profiles_pref_notificationsToast">Show toast notification</string>
  <string name="phone_profiles_pref_notificationStatusBar">Show status bar notification</string>
  <string name="phone_profiles_pref_notificationStatusBarStyle">Notification icon style</string>
  <string name="profile_preferences_category_profileidenification">Profile identification</string>
  <string name="profile_preferences_category_volumes">Volumes</string>
  <string name="profile_preferences_category_sounds">Sounds</string>
  <string name="profile_preferences_category_device">Device</string>
  <string name="profile_preferences_profileName">Profile name</string>
  <string name="profile_preferences_profileIcon">Profile icon</string>
  <string name="profile_preferences_volumeRingerMode">Ringer mode</string>
  <string name="profile_preferences_volumeRingtone">Ringtone volume</string>
  <string name="profile_preferences_volumeNotification">Notification volume</string>
  <string name="profile_preferences_volumeMedia">Media volume</string>
  <string name="profile_preferences_volumeAlarm">Alarm volume</string>
  <string name="profile_preferences_volumeSystem">System volume</string>
  <string name="profile_preferences_volumeVoice">Voice volume</string>
  <string name="profile_preferences_soundRingtoneChange">Change ringtone</string>
  <string name="profile_preferences_soundRingtone">Ringtone sound</string>
  <string name="profile_preferences_soundNotificationChange">Change notification</string>
  <string name="profile_preferences_soundNotification">Notification sound</string>
  <string name="profile_preferences_soundAlarmChange">Change alarm</string>
  <string name="profile_preferences_soundAlarm">Alarm sound</string>
  <string name="profile_preferences_deviceAirplaneMode">(R) Airplane mode</string>
  <string name="profile_preferences_deviceWiFi">Wi-Fi</string>
  <string name="profile_preferences_deviceBluetooth">Bluetooth</string>
  <string name="profile_preferences_deviceGPS">(R) GPS</string>
  <string name="profile_preferences_deviceNFC">(H) NFC</string>
  <string name="profile_preferences_deviceScreenTimeout">Screen timeout</string>
  <string name="profile_preferences_deviceBrightness">Screen brightness</string>
  <string name="profile_preferences_deviceWallpaper">Wallpaper</string>
  <string name="profile_preferences_deviceWallpaperChange">Change wallpaper</string>
  <string name="array_pref_no_change">Don\'t change</string>
  <string name="array_pref_ringerModeArray_ring">Ring</string>
  <string name="array_pref_ringerModeArray_ring_and_vibrate">Ring and Vibrate</string>
  <string name="array_pref_ringerModeArray_vibrate">Vibrate</string>
  <string name="array_pref_ringerModeArray_silent">Silent</string>
  <string name="array_pref_hardwareModeArray_on">On</string>
  <string name="array_pref_hardwareModeArray_off">Off</string>
  <string name="array_pref_hardwareModeArray_toggle">Toggle</string>
  <string name="array_pref_screenTimeoutArray_15seconds">15 seconds</string>
  <string name="array_pref_screenTimeoutArray_30seconds">30 seconds</string>
  <string name="array_pref_screenTimeoutArray_1minute">1 minute</string>
  <string name="array_pref_screenTimeoutArray_2minutes">2 minutes</string>
  <string name="array_pref_screenTimeoutArray_10minutes">10 minutes</string>
  <string name="array_pref_screenTimeoutArray_never_timeout">Never timeout</string>
  <string name="phone_profiles_pref_applicationLanguage">Language</string>
  <string name="phone_profiles_pref_applicationLanguage_system">System</string>
  <string name="phone_profiles_pref_applicationLanguage_en">English</string>
  <string name="phone_profiles_pref_applicationLanguage_sk">Slovenčina</string>
  <string name="phone_profiles_pref_applicationLanguage_cs">Čeština</string>
  <string name="phone_profiles_pref_applicationLanguage_de">Deutsch</string>
  <string name="phone_profiles_pref_applicationLanguage_ru">Русский</string>
  <string name="phone_profiles_pref_applicationLanguage_ca">Català</string>
  <string name="phone_profiles_pref_applicationLanguage_es_ES">Español (España)</string>
  <string name="phone_profiles_pref_applicationLanguage_uk">Українська</string>
  <string name="phone_profiles_pref_applicationLanguage_it">Italiano</string>
  <string name="phone_profiles_pref_applicationLanguage_fr">Français</string>
  <string name="phone_profiles_pref_applicationLanguage_pl">Polski</string>
  <string name="title_activity_shortcut_creator">PhoneProfilesPlus-shortcut</string>
  <string name="phone_profiles_pref_applicationStartOnBoot">Start on phone boot</string>
  <string name="array_pref_value_system">system</string>
  <string name="array_pref_value_en">en</string>
  <string name="array_pref_value_sk">sk</string>
  <string name="array_pref_value_cs">cs</string>
  <string name="array_pref_value_de">de</string>
  <string name="array_pref_value_ru">ru</string>
  <string name="array_pref_value_ca">ca</string>
  <string name="array_pref_value_es_ES">es-ES</string>
  <string name="array_pref_value_uk">uk</string>
  <string name="array_pref_value_it">it</string>
  <string name="array_pref_value_fr">fr</string>
  <string name="array_pref_value_pl">pl</string>
  <string name="profile_preferences_device_not_allowed">Not allowed</string>
  <string name="menu_export">Export app. data</string>
  <string name="menu_import">Import app. data</string>
  <string name="toast_export_ok">App. data exported</string>
  <string name="toast_import_ok">App. data imported</string>
  <string name="import_profiles_alert_title">Import app. data</string>
  <string name="import_profiles_alert_message">Are you sure?</string>
  <string name="import_profiles_alert_error">Error when importing app. data</string>
  <string name="export_profiles_alert_title">Export app. data</string>
  <string name="export_profiles_alert_message">Are you sure?</string>
  <string name="export_profiles_alert_error">Error when exporting app. data</string>
  <string name="profile_preferences_deviceMobileData">Mobile data</string>
  <string name="profile_preferences_deviceMobileDataPrefs">(I) Mobile data preferences</string>
  <string name="phone_profiles_pref_notificationStatusBarStyle_color">Colorful</string>
  <string name="phone_profiles_pref_notificationStatusBarStyle_android">Native</string>
  <string name="phone_profiles_pref_applicationLongClickActivation">Long-press to activate profile</string>
  <string name="profile_preferences_deviceRunApplicationPackageName">Application</string>
  <string name="profile_preferences_deviceRunApplicationChange">Run application</string>
  <string name="alert_title_delete_all_profiles">Delete all profiles</string>
  <string name="phone_profiles_pref_applicationTheme">Application theme</string>
  <string name="event_preferences_category_eventidentification">Event identification</string>
  <string name="event_preferences_eventEnabled">Enable run</string>
  <string name="event_preferences_eventName">Event name</string>
  <string name="event_preferences_eventType">Event type</string>
  <string name="phone_profiles_pref_applicationWidgetBackground">Background opaqueness</string>
  <string name="phone_profiles_pref_category_widget_icon_shortcut">Widget-Icon; Shortcut</string>
  <string name="phone_profiles_pref_category_widget_one_row">Widget-single row</string>
  <string name="event_preferences_category_eventParameters">Event parameters</string>
  <string name="event_preferences_time_timeDays">Days of week</string>
  <string name="event_preferences_time_startTime">Start time</string>
  <string name="event_preferences_time_useEndTime">Use end time</string>
  <string name="event_preferences_time_endTime">End time</string>
  <string name="event_preferences_notificationSound">Notification sound</string>
  <string name="event_preferences_battery_level_low">Lower level</string>
  <string name="event_preferences_battery_level_hight">Upper level</string>
  <string name="event_preferences_battery_charging">Charging</string>
  <string name="event_preferences_category_eventTimeParameters">Time parameters</string>
  <string name="event_preferences_category_eventBatteryParameters">Battery parameters</string>
  <string name="event_preferences_time_enabled">Enable time</string>
  <string name="event_preferences_battery_enabled">Enable battery</string>
</resources>