<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:summary="@string/phone_profiles_pref_category_gui"
        android:title="@string/phone_profiles_pref_category_gui" >
		<CheckBoxPreference 
		    android:key="applicationActivatorPrefIndicator"
		    android:title="@string/phone_profiles_pref_applicationActivatorPrefIndicator"
		    android:defaultValue="true" />
		<CheckBoxPreference 
		    android:key="applicationEditorPrefIndicator"
		    android:title="@string/phone_profiles_pref_applicationEditorPrefIndicator"
		    android:defaultValue="true" />
		<ListPreference android:title="@string/phone_profiles_pref_applicationTheme"
            android:summary="@string/phone_profiles_pref_applicationTheme_light"
            android:key="applicationTheme"
            android:defaultValue="light"
            android:entries="@array/themeArray"
            android:entryValues="@array/themeValues" />        
		<ListPreference android:title="@string/phone_profiles_pref_applicationLanguage"
            android:summary="@string/phone_profiles_pref_applicationLanguage_system"
            android:key="applicationLanguage"
            android:defaultValue="system"
            android:entries="@array/languageArray"
            android:entryValues="@array/languageValues" />        
	</PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/phone_profiles_pref_category_activation"
        android:title="@string/phone_profiles_pref_category_activation" >
		<CheckBoxPreference 
		    android:key="applicationLongClickActivation"
		    android:title="@string/phone_profiles_pref_applicationLongClickActivation"
		    android:defaultValue="false" />
		<CheckBoxPreference 
		    android:key="applicationClose"
		    android:title="@string/phone_profiles_pref_applicationClose"
		    android:defaultValue="true" />
  		<CheckBoxPreference 
		    android:key="applicationAlert"
		    android:title="@string/phone_profiles_pref_applicationAlert"
		    android:defaultValue="true" />
	</PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/phone_profiles_pref_category_notifications"
        android:title="@string/phone_profiles_pref_category_notifications" >
		<CheckBoxPreference 
		    android:key="notificationsToast"
		    android:title="@string/phone_profiles_pref_notificationsToast"
		    android:defaultValue="false" />
		<CheckBoxPreference 
		    android:key="notificationStatusBar"
		    android:title="@string/phone_profiles_pref_notificationStatusBar"
		    android:defaultValue="true" />
		<ListPreference android:title="@string/phone_profiles_pref_notificationStatusBarStyle"
            android:summary="@string/phone_profiles_pref_notificationStatusBarStyle_color"
            android:key="notificationStatusBarStyle"
            android:defaultValue="0"
            android:entries="@array/notificationIconStyleArray"
            android:entryValues="@array/notificationIconStyleValues" />        
	</PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/phone_profiles_pref_category_start"
        android:title="@string/phone_profiles_pref_category_start" >
  		<CheckBoxPreference 
		    android:key="applicationStartOnBoot"
		    android:title="@string/phone_profiles_pref_applicationStartOnBoot"
		    android:defaultValue="false" />
        <CheckBoxPreference 
		    android:key="applicationActivate"
		    android:title="@string/phone_profiles_pref_applicationActivate"
		    android:defaultValue="true" />
  	</PreferenceCategory>
</PreferenceScreen>    
