<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:henrichg="http://schemas.android.com/apk/res/sk.henrichg.phoneprofiles" >
    <PreferenceCategory
        android:summary="@string/event_preferences_category_eventidentification"
        android:title="@string/event_preferences_category_eventidentification" >
		<CheckBoxPreference 
		    android:key="eventEnabled"
		    android:title="@string/event_preferences_eventEnabled"
		    android:defaultValue="false" />
        <EditTextPreference
            android:key="eventName"
            android:summary="@string/event_preferences_eventName"
            android:title="@string/event_preferences_eventName" /> 
        <sk.henrichg.phoneprofiles.EventTypePreference
            android:defaultValue="1"
            android:key="eventType"
            android:title="@string/event_preferences_eventType" />
        <sk.henrichg.phoneprofiles.ProfilePreference
            android:defaultValue="0"
            android:key="eventProfile"
            android:title="@string/event_preferences_eventProfile" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/event_preferences_category_eventParameters"
        android:title="@string/event_preferences_category_eventParameters" >
        <sk.henrichg.phoneprofiles.ListPreferenceMultiSelect
            android:defaultValue="#ALL#"
            android:key="eventTimeDays"
            android:title="@string/event_preferences_time_timeDays"
            android:entries="@array/daysOfWeekArray"
            android:entryValues="@array/daysOfWeekValues"/>
        <sk.henrichg.phoneprofiles.TimePreference
            android:key="eventTimeStartTime"
            android:defaultValue="0"
            android:title="@string/event_preferences_time_startTime" />
		<CheckBoxPreference 
		    android:key="eventTimeUseEndTime"
		    android:title="@string/event_preferences_time_useEndTime"
		    android:defaultValue="false" />
        <sk.henrichg.phoneprofiles.TimePreference
            android:key="eventTimeEndTime"
            android:defaultValue="0"
            android:title="@string/event_preferences_time_endTime"
            android:dependency="eventTimeUseEndTime" />
    </PreferenceCategory>
</PreferenceScreen>    
