<?xml version="1.0" encoding="UTF-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:unified="http://schemas.android.com/apk/res-auto" >

    <!--
	/*
	** Header definitions are identical to android:* except for preferenceRes which should be a reference to a preference xml file
	** Unlike the native headers these are also used for building the single pane version.
	*/
    -->
    <header
        unified:fragment="sk.henrichg.phoneprofilesplus.PhoneProfilesPreferencesActivity$ActivatorPreferencesFragment"
        unified:title="@string/phone_profiles_pref_category_activator"
        unified:preferenceRes="@xml/phone_profiles_preferences_activator" />
    <header
        unified:fragment="sk.henrichg.phoneprofilesplus.PhoneProfilesPreferencesActivity$ActivationPreferencesFragment"
        unified:title="@string/phone_profiles_pref_category_activation"
        unified:preferenceRes="@xml/phone_profiles_preferences_activation" />
    <header
        unified:fragment="sk.henrichg.phoneprofilesplus.PhoneProfilesPreferencesActivity$EditorPreferencesFragment"
        unified:title="@string/phone_profiles_pref_category_editor"
        unified:preferenceRes="@xml/phone_profiles_preferences_editor" />
    <header
        unified:fragment="sk.henrichg.phoneprofilesplus.PhoneProfilesPreferencesActivity$GUIPreferencesFragment"
        unified:title="@string/phone_profiles_pref_category_gui"
        unified:preferenceRes="@xml/phone_profiles_preferences_gui" />
    <header
        unified:fragment="sk.henrichg.phoneprofilesplus.PhoneProfilesPreferencesActivity$NotificationsPreferencesFragment"
        unified:title="@string/phone_profiles_pref_category_notifications"
        unified:preferenceRes="@xml/phone_profiles_preferences_notifications" />
    <header
        unified:fragment="sk.henrichg.phoneprofilesplus.PhoneProfilesPreferencesActivity$StartPreferencesFragment"
        unified:title="@string/phone_profiles_pref_category_start"
        unified:preferenceRes="@xml/phone_profiles_preferences_start" />
    <header
        unified:fragment="sk.henrichg.phoneprofilesplus.PhoneProfilesPreferencesActivity$WidgetListPreferencesFragment"
        unified:title="@string/phone_profiles_pref_category_widget_one_row"
        unified:preferenceRes="@xml/phone_profiles_preferences_widget_list" />
    <header
        unified:fragment="sk.henrichg.phoneprofilesplus.PhoneProfilesPreferencesActivity$WidgetIconShortcutPreferencesFragment"
        unified:title="@string/phone_profiles_pref_category_widget_icon_shortcut"
        unified:preferenceRes="@xml/phone_profiles_preferences_widget_icon_shortcut" />
    
</preference-headers>