<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<CheckBoxPreference 
	    android:key="notificationsToast"
	    android:title="@string/phone_profiles_pref_notificationsToast"
	    android:defaultValue="false" />
	<CheckBoxPreference 
	    android:key="notificationStatusBar"
	    android:title="@string/phone_profiles_pref_notificationStatusBar"
	    android:defaultValue="true" />
	<ListPreference android:title="@string/phone_profiles_pref_notificationStatusBarStyle"
           android:summary="@string/phone_profiles_pref_notificationStatusBarStyle_color"
           android:key="notificationStatusBarStyle"
           android:defaultValue="0"
           android:entries="@array/notificationIconStyleArray"
           android:entryValues="@array/notificationIconStyleValues" />        
</PreferenceScreen>    
