<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="120"
        android:showAsAction="never"
	    android:icon="?attr/actionSettingsIcon" />
    <item android:id="@+id/menu_export"
        android:title="@string/menu_export"
        android:orderInCategory="130"
        android:showAsAction="never"
	    android:icon="?attr/actionImportExportIcon" />
    <item android:id="@+id/menu_import"
        android:title="@string/menu_import"
        android:orderInCategory="140"
        android:showAsAction="never"
	    android:icon="?attr/actionImportExportIcon" />
	<item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="150"
        android:showAsAction="never"
	    android:icon="?attr/actionExitIcon" />
</menu>
