<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<CheckBoxPreference 
	    android:key="applicationWidgetListPrefIndicator"
	    android:title="@string/phone_profiles_pref_applicationPrefIndicator"
	    android:defaultValue="true" />
	<CheckBoxPreference 
	    android:key="applicationWidgetListHeader"
	    android:title="@string/phone_profiles_pref_applicationHeader"
	    android:defaultValue="true" />
	<ListPreference android:title="@string/phone_profiles_pref_applicationWidgetBackground"
           android:summary="25%"
           android:key="applicationWidgetListBackground"
           android:defaultValue="25"
           android:entries="@array/widgetBackgroundArray"
           android:entryValues="@array/widgetBackgroundValues" />        
</PreferenceScreen>    